--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/node": "^16.11.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "sass": "^1.44.0",
     "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-plugin-compression": "^0.3.6"
   }
 }
