--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "time-stuff",
+  "name": "running-clock",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,17 +7,17 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.0.0",
     "sass": "^1.44.0",
     "typescript": "^4.3.2",
     "vite": "^2.6.4",
-    "vite-plugin-compression": "^0.3.6"
+    "vite-plugin-compression": "^0.5.1"
   }
 }
