--- a/package.json
+++ b/package.json
@@ -2,23 +2,37 @@
   "name": "running-clock",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
+    "format": "prettier --write .",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "serve": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postinstall": "husky install"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "~18.0.0",
+    "react-dom": "~18.0.0"
   },
   "devDependencies": {
-    "@types/node": "^16.11.11",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.0.0",
-    "sass": "^1.44.0",
-    "typescript": "^4.3.2",
-    "vite": "^2.6.4",
-    "vite-plugin-compression": "^0.5.1"
+    "@types/node": "~16.11.26",
+    "@types/react": "~18.0.0",
+    "@types/react-dom": "~18.0.0",
+    "@vitejs/plugin-react": "~1.3.0",
+    "husky": "^7.0.0",
+    "pinst": "^3.0.0",
+    "prettier": "~2.6.2",
+    "sass": "~1.50.0",
+    "typescript": "~4.6.3",
+    "vite": "~2.9.1"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "printWidth": 80,
+    "semi": true,
+    "singleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "all"
   }
 }
