--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
+# yarn stuff
 /node_modules
 /.pnp
 .pnp.js
+/.yarn/cache
+/.yarn/install-state.gz
+yarn-debug.log*
+yarn-error.log*
 
 # testing
 /coverage
@@ -14,7 +19,3 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
