--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-# yarn stuff
-/node_modules
-/.pnp
-.pnp.js
-/.yarn/cache
-/.yarn/install-state.gz
-yarn-debug.log*
-yarn-error.log*
+# npm stuff
+node_modules
+.cache
+*.log
+.DS_Store
 
 # testing
 /coverage
@@ -16,6 +13,3 @@ yarn-error.log*
 # misc
 .DS_Store
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
