--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@types/react": "~18.0.0",
     "@types/react-dom": "~18.0.0",
     "@vitejs/plugin-react": "~1.3.0",
-    "husky": "^7.0.0",
-    "pinst": "^3.0.0",
+    "husky": "~7.0.0",
     "prettier": "~2.6.2",
     "sass": "~1.50.0",
     "typescript": "~4.6.3",
