--- a/package.json
+++ b/package.json
@@ -1,36 +1,47 @@
 {
   "name": "running-clock",
+  "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "build": "vite build",
+    "check": "svelte-check --tsconfig ./tsconfig.json",
     "dev": "vite",
-    "format": "prettier --write .",
+    "lint": "eslint .",
+    "format": "prettier --plugin-search-dir=. --write .",
     "prepare": "husky install",
-    "serve": "vite preview",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "react": "~18.0.0",
-    "react-dom": "~18.0.0"
+    "serve": "vite preview"
   },
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/node": "~16.11.26",
-    "@types/react": "~18.0.6",
-    "@types/react-dom": "~18.0.2",
-    "@vitejs/plugin-react": "~1.3.0",
-    "husky": "~7.0.0",
-    "prettier": "~2.6.2",
-    "sass": "~1.50.1",
-    "typescript": "~4.6.3",
-    "vite": "~2.9.1"
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.7.0",
+    "sass": "^1.53.0",
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.2.7",
+    "svelte-preprocess": "^4.9.8",
+    "tslib": "^2.3.1",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.9"
   },
   "prettier": {
     "arrowParens": "avoid",
+    "bracketSameLine": true,
     "printWidth": 80,
     "semi": true,
     "singleQuote": true,
     "tabWidth": 2,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "svelteSortOrder": "options-scripts-markup-styles",
+    "svelteStrictMode": true,
+    "svelteAllowShorthand": false
   },
   "packageManager": "npm@8.5.0"
 }
