--- a/package.json
+++ b/package.json
@@ -8,28 +8,28 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "dev": "vite",
     "lint": "eslint .",
-    "format": "prettier --plugin-search-dir=. --write .",
-    "prepare": "husky install",
+    "format": "prettier --write .",
+    "prepare": "husky",
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tsconfig/svelte": "^3.0.0",
-    "@types/node": "~16.11.26",
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "husky": "^8.0.1",
-    "prettier": "^2.7.1",
-    "prettier-plugin-svelte": "^2.7.0",
-    "sass": "^1.53.0",
-    "svelte": "^4.2.19",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.7.4",
-    "vite": "^2.9.18"
+    "@sveltejs/vite-plugin-svelte": "3.1.2",
+    "@tsconfig/svelte": "5.0.4",
+    "@types/node": "22.5.1",
+    "@typescript-eslint/eslint-plugin": "8.3.0",
+    "eslint": "9.9.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-svelte": "2.43.0",
+    "husky": "9.1.5",
+    "prettier": "3.3.3",
+    "prettier-plugin-svelte": "3.2.6",
+    "sass": "1.77.8",
+    "svelte": "4.2.19",
+    "svelte-check": "3.8.6",
+    "svelte-preprocess": "6.0.2",
+    "tslib": "2.7.0",
+    "typescript": "5.5.4",
+    "vite": "5.4.2"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -38,10 +38,7 @@
     "semi": true,
     "singleQuote": true,
     "tabWidth": 2,
-    "trailingComma": "all",
-    "svelteSortOrder": "options-scripts-markup-styles",
-    "svelteStrictMode": true,
-    "svelteAllowShorthand": false
+    "trailingComma": "all"
   },
-  "packageManager": "npm@8.5.0"
+  "packageManager": "npm@10.8.1"
 }
